--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 
 <!-- Footer Section -->
 <footer>
+    <p>
+        By using this Text-to-Audio Converter / Audiobook Creator, you acknowledge that you have read and agreed to all terms and conditions outlined in the licenses and agreements of this repository. For more details, please visit 
+        <a href="https://github.com/TheMorpheus407/OpenAI-Audiobook-Generator" target="_blank">https://github.com/TheMorpheus407/OpenAI-Audiobook-Generator</a>.
+    </p>
     <p>Get your OpenAI API Key <a href="https://platform.openai.com/api-keys">here</a>.</p>
     <p id="status">This will take some time... Make sure to not interrupt the process!</p>
     <p>Step 1: Creating TTS: <progress id="progressbar1" value="0" max="0"></progress></p>
