--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 <div id="generate-section">
     <button id="generate-audiobook">Generate Audiobook</button>
 </div>
-
+<!-- Error Indicator (Hidden Initially) -->
+<div id="error-indicator" style="display: none;">
+    <p style="color:red;">Es ist ein Fehler bei der Anfrage aufgetreten. <br/> Bist du dir sicher das genug Guthaben verfügbar ist?</p>
+</div>
 <!-- Progress Indicator (Hidden Initially) -->
 <div id="progress-indicator" style="display: none;">
     <p>Converting...</p>
