switch fix 2 to english

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 <!-- Error Indicator (Hidden Initially) -->
 <div id="error-indicator" style="display: none;">
-    <p style="color:red;">Es ist ein Fehler bei der Anfrage aufgetreten. <br/> Bist du dir sicher das genug Guthaben verfügbar ist?</p>
+    <p style="color:red;">An error occured calling the OpenAI API: <br/>Are you sure that the entered key is valid and that there is enough credit balance on your account?</p>
 </div>
 <!-- Progress Indicator (Hidden Initially) -->
 <div id="progress-indicator" style="display: none;">
